Changed the SRU update structures and codecs to reflect the SRU pre 1.0
spec, at http://www.loc.gov/standards/sru/record-update/
This has changed the binary layout of the following structs:
Z_SRW_extra_record, Z_SRW_updateRequest, Z_SRW_updateResponse and
bend_update_rr . Patch by Ko van der Sloot.

Added GFS utility function bend_assoc_is_alive which returns 1 if
association is still alive (client is connected); 0 otherwise (client
closed connection). This allows busy servers to stop working for
impatient clients.

Fixed bug #740: Handle SRU records referring to xmlns's outside recordData.

Fixed bug #722: Allow Z39.50 Init Options to be specified / retrieved.
Client code may now interrogate options such as "init_opt_sort" to
find out whether the server claims to support various options.

--- 2.1.40 2006/11/27

Added utilities yaz_{set,get}_esn to set/get element set name from
record composition.

Removed the build of libyazthread.la. The libyaz.so is the threaded version
of YAZ and has been so since YAZ 2.1.10.

Implemented ZOOM_record_error which returns error information for
record (surrogate diagnostic).

--- 2.1.38 2006/10/31

Updates for SRU Update by Ko van der Sloot:
1. Changed name from "operation" to "action"
2. Fixed that that "recordIdentifier" was called "recordId". Kept the old
versions in the code, marked as 'backward compatible'.
3. Added diagnostics for SRU Update.

Fixed bug #709: Records are fetched in wrong format when tasks are queued.

Fixed bug #707: CQL->RPN ignores lines with leading spaces.

Fixed bug #706: XML hex encoding UTF-8 chars out of range 0-255.

For GFS, fixed problem with SRU diagnostic 'First record position out of
range' being issued for 0 hits.

zoomtst10 part of Windows Build.

--- 2.1.36 2006/10/13

Implemented yaz_filepath_comp which splits a path into file path
components (required by Zebra 2.0.3+).

Change wording of YAZ license to the 'Revised BSD License'. YAZ has used a